--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/reset.css" />
+    <link rel="stylesheet" href="/src/main.css" />
+    <script type="module" src="src/animation.ts"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <h1 class="text-5xl text-center font-sans a-fadein">マイサイト</h1>
   </body>
 </html>
